--- a/www/index.html
+++ b/www/index.html
@@ -14,10 +14,18 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+<script type="text/javascript" src="loader/lib/lgz/js/kconf.js?"></script>
+<script type="text/javascript" src="loader/lib/vendor/jquery.min.js?"></script>
+<script type="text/javascript" src="loader/lib/lgz/js/k.js?"></script>
+<script type="text/javascript" src="loader/lib/lgz/js/lib.js?"></script>
+<script type="text/javascript" src="loader/lib/lgz/js/msgframe.js?"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="loader/rsc/js/parent.js"></script>
+
   </head>
   <body ng-app="linguazone">
     <!--
