--- a/www/index.html
+++ b/www/index.html
@@ -14,8 +14,12 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- your app's js -->
+    <!-- libraries -->
     <script src="lib/xml2json.min.js"></script>
+    <script src="lib/angular-cookie.min.js"></script>
+    <script src="lib/ng-token-auth.min.js"></script>
+    
+    <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
