Fixing glitches to integrate iframe properly

--- a/www/index.html
+++ b/www/index.html
@@ -18,13 +18,13 @@
     <script src="lib/xml2json.min.js"></script>
     <script src="lib/angular-cookie.min.js"></script>
     <script src="lib/ng-token-auth.min.js"></script>
-    <script src="lib/jquery.min.js"></script>
 
     <!-- iframe messaging -->
     <script src="loader/lib/lgz/js/kconf.js?"></script>
     <script src="loader/lib/lgz/js/k.js?"></script>
     <script src="loader/lib/lgz/js/lib.js?"></script>
     <script src="loader/lib/lgz/js/msgframe.js?"></script>
+    <script src="loader/lib/vendor/jquery.min.js"></script>
     <script src="loader/rsc/js/parent.js?"></script>
     
     <!-- app -->
