--- a/www/index.html
+++ b/www/index.html
@@ -14,11 +14,6 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- libraries -->
-    <script src="lib/xml2json.min.js"></script>
-    <script src="lib/angular-cookie.min.js"></script>
-    <script src="lib/ng-token-auth.min.js"></script>
-
     <!-- iframe messaging -->
     <script src="loader/lib/lgz/js/kconf.js?"></script>
     <script src="loader/lib/lgz/js/k.js?"></script>
@@ -26,6 +21,12 @@
     <script src="loader/lib/lgz/js/msgframe.js?"></script>
     <script src="loader/lib/vendor/jquery.min.js"></script>
     <script src="loader/rsc/js/parent.js?"></script>
+
+    <!-- libraries -->
+    <script src="lib/xml2json.min.js"></script>
+    <script src="lib/angular-cookie.min.js"></script>
+    <script src="lib/ng-token-auth.min.js"></script>
+    <script src="lib/jquery.transloadit.js"></script>
     
     <!-- app -->
     <script src="js/app.js"></script>
