--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/videogular.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -30,6 +31,9 @@
     <script src="lib/spin.min.js"></script>
     <script src="lib/angular-spinner.min.js"></script>
     <script src="lib/angular-loading-spinner.js"></script>
+    <script src="lib/angular-sanitize.min.js"></script>
+    <script src="lib/videogular.js"></script>
+    <script src="lib/vg-controls.js"></script>
     
     <!-- app -->
     <script src="js/app.js"></script>
